added random cursor suffix to the output builder so it behaves like the real VT220, added home_cursor tests

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Run bin/beltone.rb to start
 
-At the moment it connects uses pico as a vt220 app
+At the moment it connects uses pico as an example vt220 app
 
 You will need to enable telnetd for it to work.
 sudo apt-get install telnetd (for debian like things)
