added license to read me

--- a/README
+++ b/README
@@ -1,8 +1,19 @@
+Copyright 2010 Michael Bain
+
+The Beltone code is licensed under the Apache License, Version 2.0 (the "License"); you may not use this code except in compliance with the License. You may obtain a copy of the License at
+
+http://www.apache.org/licenses/LICENSE-2.0
+
+------------------------------------------------------------------------------------------------------------------------
+
+
+Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
+
 This is a ruby program to enable automated testing of VT220 applications over telnet.
 
 I don’t have a legacy VT220 application kicking around so I’m currently using the pico editor to develop this.
 
-It’s currently in very early development, everything thats checked in seems to be working, however there are still a lot of vt220 commands not implemented yet. I’m going on holiday and will probably begin development in earnest around the end of August.
+It’s currently in very early development, everything thats checked in seems to be working, however there are still a lot of vt220 commands not implemented yet. I’m going on holiday and will probably begin development in earnest till I get back.
 
 Getting Started
 ===============
